# python-template

./: .pre-commit-config.yaml  pyproject.toml  renovate.json
.github/workflows/: python-app.yaml
src/: logger.py  main.py
