[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_python_app"
version = "0.1.0"
description = "A Python 3.12 app with mypy, ruff, pytest, pydantic, and logfire."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic==2.0.0",
    "logfire==0.1.0",
]

[project.optional-dependencies]
dev = [
    "mypy==1.0.0",
    "ruff==0.0.280",
    "pytest==7.0.0",
    "pytest-cov==4.0.0",
]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.ruff]
line-length = 88
select = [
    "E",  # Pycodestyle errors
    "F",  # Pyflakes
    "I",  # Isort
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "W",  # Pycodestyle warnings
]
ignore = []

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]