[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"

dependencies = [
    "pydantic==2.10.6",
    "logfire==3.5.3",
]

[project.optional-dependencies]
dev = [
    "mypy==1.0.0",
    "ruff==0.9.6",
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.ruff]
line-length = 88
select = [
    "E",  # Pycodestyle errors
    "F",  # Pyflakes
    "I",  # Isort
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "W",  # Pycodestyle warnings
]
ignore = []

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]